@@ -43,6 +43,8 @@ New in spot 2.5.2 (2018-03-25)
   - Fix cryptic error message from Python's spot.translate() and
     spot.postprocess() when supplying conflicting arguments.
 
+  - "autfilt -B --sat-minimize" was incorrectly producing
+    transition-based automata.
   - acc_cond::is_generalized_rabin() and
     acc_cond::is_generalized_streett() would segfault on weird
     acceptance conditions such as "3 t" or "3 f".
